--- a/src/app/escena/escena.component.html
+++ b/src/app/escena/escena.component.html
@@ -1,3 +1,28 @@
-<h3>Dedica moltes hores</h3>
+<!--<h3>Dedica moltes hores</h3>
 <p>Un mínim de 30 hores a la setmana. Si no en tens prou, hauràs de dedicar-li més hores. Al principi sembla impossible,
-    però notaràs una millora ràpidament.</p>
+    però notaràs una millora ràpidament.</p>-->
+
+   <!-- <div class="escena-container">
+        <div *ngFor="let step of steps" class="card shadow mb-3">
+          <div class="card-header" [ngStyle]="{ 'background-color': step.bgcolor }">
+            <img [src]="step.img" alt="{{ step.title }}" class="card-img-top img-fluid">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">{{ step.title }}</h5>
+            <p class="card-text">{{ step.description }}</p>
+          </div>
+        </div>
+      </div>-->
+
+      <div class="escena-container">
+        <div *ngFor="let step of steps" class="card shadow mb-3">
+          <div class="card-body">
+            <h5 class="card-title">{{ step.title }}</h5>
+            <p class="card-text">{{ step.description }}</p>
+          </div>
+        </div>
+      </div>
+
+      
+      
+      
