--- a/src/app/escena/escena.component.html
+++ b/src/app/escena/escena.component.html
@@ -39,7 +39,7 @@
         </div>
       </div>-->
       
-     <div class="escena-container d-flex justify-content-center align-items-center" style="height: 100vh; width: 100vw;">
+     <!--<div class="escena-container d-flex justify-content-center align-items-center" style="height: 100vh; width: 100vw;">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-12 col-sm-10 col-md-8 col-lg-6 d-flex align-items-center justify-content-center">
@@ -63,7 +63,36 @@
             </div>
           </div>
         </div>
+      </div>-->
+      <div class="escena-container d-flex justify-content-center align-items-center" style="height: 100vh; width: 100vw;">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-12 col-sm-10 col-md-8 col-lg-6 d-flex align-items-center justify-content-center">
+              <div class="card shadow" style="border-radius: 20px; overflow: hidden;">
+                <div class="card-header p-0" [ngStyle]="{ 'background-color': steps[currentStep].bgcolor }">
+                  <img [src]="steps[currentStep].img" alt="{{ steps[currentStep].title }}" class="card-img-top img-fluid step-image">
+                </div>
+                <div class="card-body" style="background-color: white;">
+                  <h4>{{ steps[currentStep].title }}</h4>
+                  <p class="card-text">{{ steps[currentStep].description }}</p>
+                </div>
+                <div class="card-footer d-flex justify-content-between align-items-center"
+                  style="background-color: white;">
+                  <button class="round-button fa-solid fa-arrow-left" (click)="prevStep()"
+                    [disabled]="currentStep === 0"></button>
+                  <div class="d-flex justify-content-center flex-grow-1">
+                    <div *ngFor="let step of steps; let i = index" (click)="setCurrentStepTo(i)" class="indicator mx-1"
+                      [ngClass]="{'active': currentStep === i}"></div>
+                  </div>
+                  <button class="round-button fa-solid fa-arrow-right" (click)="nextStep()"
+                    [disabled]="currentStep === steps.length - 1"></button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+      
 
 
       <!--  <div class="card-footer d-flex justify-content-between align-items-center" style="background-color: white;">
