--- a/src/app/escena/escena.component.scss
+++ b/src/app/escena/escena.component.scss
@@ -1,3 +1,92 @@
+/*.escena-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+}
+
+.card {
+    width: 100%;
+    max-width: 500px;
+}
+
+.card-header {
+    padding: 0;
+}
+
+.card-header img {
+    width: 100%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.card-body {
+    padding: 1.5rem;
+}
+
+.card-title {
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
+.card-text {
+    font-size: 1rem;
+    color: #555;
+}
+
+.navigation-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
+
+button {
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+}
+
+
+
+.indicator {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: gray;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.indicator.active {
+    background-color: black;
+}
+
+button.round-button {
+    border: none;
+    background: none;
+    font-size: 24px;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: transparent;
+    color: black;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+button.round-button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+button.round-button:enabled {
+    background-color: black;
+    color: white;
+}*/
+
 .escena-container {
     display: flex;
     justify-content: center;
@@ -9,16 +98,19 @@
   .card {
     width: 100%;
     max-width: 500px;
+    border-radius: 15px; /* Redondear las esquinas */
   }
   
   .card-header {
     padding: 0;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
   }
   
   .card-header img {
     width: 100%;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
   }
   
   .card-body {
@@ -35,18 +127,15 @@
     color: #555;
   }
   
-  .navigation-buttons {
+  .card-footer {
+    padding: 1rem;
+  }
+  
+  .indicator-container {
     display: flex;
-    justify-content: space-between;
-    margin-top: 1rem;
+    justify-content: flex-start;
+    align-items: center;
   }
-  
-  button {
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-  }
-
-  
   
   .indicator {
     width: 10px;
@@ -59,6 +148,12 @@
   
   .indicator.active {
     background-color: black;
+  }
+  
+  .button-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
   }
   
   button.round-button {
@@ -75,6 +170,7 @@
     background-color: transparent;
     color: black;
     transition: background-color 0.3s, color 0.3s;
+    margin-left: 10px;
   }
   
   button.round-button:disabled {
@@ -86,4 +182,6 @@
     background-color: black;
     color: white;
   }
+  
+  
   
