all good nivell2

--- a/src/app/escena/escena.component.scss
+++ b/src/app/escena/escena.component.scss
@@ -88,100 +88,98 @@ button.round-button:enabled {
 }*/
 
 .escena-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-  }
-  
-  .card {
-    width: 100%;
-    max-width: 500px;
-    border-radius: 15px; /* Redondear las esquinas */
-  }
-  
-  .card-header {
-    padding: 0;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-  }
-  
-  .card-header img {
-    width: 100%;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-  }
-  
-  .card-body {
-    padding: 1.5rem;
-  }
-  
-  .card-title {
-    font-size: 1.25rem;
-    font-weight: bold;
-  }
-  
-  .card-text {
-    font-size: 1rem;
-    color: #555;
-  }
-  
-  .card-footer {
-    padding: 1rem;
-  }
-  
-  .indicator-container {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  
-  .indicator {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: gray;
-    margin: 0 5px;
-    cursor: pointer;
-  }
-  
-  .indicator.active {
-    background-color: black;
-  }
-  
-  .button-container {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  
-  button.round-button {
-    border: none;
-    background: none;
-    font-size: 24px;
-    cursor: pointer;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: transparent;
-    color: black;
-    transition: background-color 0.3s, color 0.3s;
-    margin-left: 10px;
-  }
-  
-  button.round-button:disabled {
-    opacity: 0.5;
-    cursor: not-allowed;
-  }
-  
-  button.round-button:enabled {
-    background-color: black;
-    color: white;
-  }
-  
-  
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+.card {
+  width: 100%;
+  max-width: 500px;
+  border-radius: 15px;
+  /* Redondear las esquinas */
+}
+
+.card-header {
+  padding: 0;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.card-header img {
+  width: 100%;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.card-body {
+  padding: 1.5rem;
+}
+
+.card-title {
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.card-text {
+  font-size: 1rem;
+  color: #555;
+}
+
+.card-footer {
+  padding: 1rem;
+}
+
+.indicator-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.indicator {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: gray;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.indicator.active {
+  background-color: black;
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+button.round-button {
+  border: none;
+  background: none;
+  font-size: 24px;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: transparent;
+  color: black;
+  transition: background-color 0.3s, color 0.3s;
+  margin-left: 10px;
+}
+
+button.round-button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+button.round-button:enabled {
+  background-color: black;
+  color: white;
+}
